Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Giá xăng dầu tiếp tục giảm sâu, RON95 về mức dưới 20.000 đồng/lít",
+    "content": "Giá xăng dầu tại Việt Nam đã giảm mạnh trong đợt điều chỉnh mới nhất vào chiều ngày 12-3, với xăng RON 95 giảm về mức 19.649 đồng/lít, giảm 753 đồng/lít so với trước đó. Xăng E5 RON 92 cũng giảm xuống 19.281 đồng/lít. Nguyên nhân của sự giảm giá này được cho là do ảnh hưởng từ thị trường xăng dầu thế giới và quyết định không trích lập quỹ bình ổn giá. Đây là mức giá thấp nhất của xăng RON 95 trong hơn 3 năm qua.",
+    "link": "https://tuoitre.vn/gia-xang-dau-tiep-tuc-giam-sau-ron95-ve-muc-duoi-20-000-dong-lit-20250313145016829.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Giá xăng RON 95 hiện nay là bao nhiêu?",
+    "answers": [
+      {
+        "text": "19.649 đồng/lít",
+        "correct": true
+      },
+      {
+        "text": "21.000 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "19.281 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "20.000 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "17.898 đồng/lít",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cô gái mang lệnh truy nã nguy hiểm đang chuẩn bị trốn sang Campuchia thì bị bắt",
     "content": "Ngày 13-3, Công an Đà Nẵng đã bắt giữ Đặng Ý Nhi, một cô gái mang lệnh truy nã nguy hiểm, khi cô đang chuẩn bị trốn sang Campuchia. Nhi đã bị TAND quận Sơn Trà tuyên phạt 7 năm tù về tội tổ chức sử dụng trái phép chất ma túy và bỏ trốn từ tháng 8-2024. Sau khi nhận được thông tin, tổ công tác của phòng cảnh sát đã phối hợp với công an địa phương vây bắt Nhi tại TP.HCM.",
     "link": "https://tuoitre.vn/co-gai-mang-lenh-truy-na-nguy-hiem-dang-chuan-bi-tron-sang-campuchia-thi-bi-bat-20250313142552314.htm",
@@ -434,33 +465,6 @@
     ]
   },
   {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
-    "answers": [
-      {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc tự điều trị tại nhà.",
-        "correct": false
-      },
-      {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau khớp háng có nên đi bộ?",
     "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
     "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
@@ -483,6 +487,33 @@
       },
       {
         "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "answers": [
+      {
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc tự điều trị tại nhà.",
+        "correct": false
+      },
+      {
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
@@ -2103,6 +2134,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -2129,33 +2187,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -2358,33 +2389,6 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2411,6 +2415,33 @@
       },
       {
         "text": "92 tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3339,33 +3370,6 @@
     ]
   },
   {
-    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
-    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
-    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
-    "answers": [
-      {
-        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
-        "correct": true
-      },
-      {
-        "text": "Không, tuyệt đối không nên cho ăn.",
-        "correct": false
-      },
-      {
-        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn trứng sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -3419,6 +3423,33 @@
       },
       {
         "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ăn trứng khi mắc sốt xuất huyết có ảnh hưởng tiêu hóa?",
+    "content": "Trẻ mắc sốt xuất huyết có thể ăn trứng nhưng cần lưu ý đến tình trạng sức khỏe. Khi trẻ sốt cao, không nên cho trẻ ăn trứng vì hệ tiêu hóa có thể hoạt động kém và protein trong trứng có thể gây khó tiêu. Sau khi cơn sốt giảm và hệ tiêu hóa ổn định, trứng có thể được bổ sung vào chế độ ăn, nhưng cần chế biến cẩn thận và ăn vào buổi sáng để tốt cho tiêu hóa.",
+    "link": "https://vnexpress.net/an-trung-khi-mac-sot-xuat-huyet-co-anh-huong-tieu-hoa-4860513.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Có nên cho trẻ ăn trứng khi mắc sốt xuất huyết không?",
+    "answers": [
+      {
+        "text": "Có, nhưng chỉ khi trẻ không sốt cao.",
+        "correct": true
+      },
+      {
+        "text": "Không, tuyệt đối không nên cho ăn.",
+        "correct": false
+      },
+      {
+        "text": "Có, trẻ có thể ăn bất kỳ lúc nào.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn trứng sống.",
         "correct": false
       }
     ]
@@ -4436,64 +4467,6 @@
       },
       {
         "text": "90 triệu euro",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "AI không tranh việc, chỉ bổ trợ hoạt động con người",
-    "content": "Tại hội nghị AISC 2025, TS. Christopher Nguyễn nhấn mạnh rằng trí tuệ nhân tạo (AI) không thay thế con người mà chỉ bổ trợ cho các hoạt động của họ. Ông cho rằng Việt Nam có nhiều lợi thế trong việc phát triển công nghệ AI và bán dẫn, nhờ vào sự phát triển nhanh chóng về hạ tầng băng thông rộng và thu hút đầu tư từ các công ty công nghệ lớn. Tuy nhiên, để trở thành một trung tâm AI khu vực, Việt Nam cần cải thiện về hạ tầng và đào tạo nguồn nhân lực cho ngành này.",
-    "link": "https://tuoitre.vn/ai-khong-tranh-viec-chi-bo-tro-hoat-dong-con-nguoi-20250312141714811.htm",
-    "cat": "cong-nghe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "AI có vai trò gì trong hoạt động của con người?",
-    "answers": [
-      {
-        "text": "AI bổ trợ cho hoạt động của con người",
-        "correct": true
-      },
-      {
-        "text": "AI thay thế hoàn toàn con người",
-        "correct": false
-      },
-      {
-        "text": "AI không có vai trò gì",
-        "correct": false
-      },
-      {
-        "text": "AI chỉ là một công nghệ không cần thiết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hủy án vụ làm giả nhãn hiệu 1.440 kính chiếu hậu, 220 thảm lót sàn xe máy",
-    "content": "Sáng 12-3, TAND TP.HCM đã xét xử phúc thẩm và quyết định hủy án sơ thẩm trong vụ án làm giả nhãn hiệu 1.440 kính chiếu hậu và 220 thảm lót sàn xe máy do xác định sai tư cách tố tụng. Các bị cáo Nguyễn Thị Bích Trang và Trương Phạm Cường đã bị phát hiện vận chuyển và kinh doanh hàng hóa giả mạo nhãn hiệu \"FERRIAN\". Tòa án xác định rằng hộ kinh doanh Hùng Cường không nên được coi là người có quyền lợi, nghĩa vụ liên quan mà là bị hại trong vụ án, dẫn đến việc hủy bỏ bản án sơ thẩm trước đó.",
-    "link": "https://tuoitre.vn/huy-an-vu-lam-gia-nhan-hieu-1-440-kinh-chieu-hau-220-tham-lot-san-xe-may-20250312135512662.htm",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tòa án đã quyết định điều gì trong vụ án làm giả nhãn hiệu kính chiếu hậu và thảm lót sàn xe máy?",
-    "answers": [
-      {
-        "text": "Hủy án sơ thẩm do xác định sai tư cách tố tụng.",
-        "correct": true
-      },
-      {
-        "text": "Giữ nguyên bản án sơ thẩm.",
-        "correct": false
-      },
-      {
-        "text": "Tăng hình phạt cho các bị cáo.",
-        "correct": false
-      },
-      {
-        "text": "Đình chỉ vụ án.",
-        "correct": false
-      },
-      {
-        "text": "Chuyển hồ sơ sang cơ quan điều tra khác.",
         "correct": false
       }
     ]
