Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,33 @@
     ]
   },
   {
+    "title": "Đầu tư 100 tỷ đồng mở rộng bến phà ra đảo Cát Bà",
+    "content": "Dự án mở rộng bến phà Đồng Bài - Cái Viềng nối liền đất liền với đảo Cát Bà sẽ được đầu tư gần 100 tỷ đồng bởi UBND huyện Cát Hải. Mục tiêu của dự án là cải thiện cơ sở hạ tầng bến phà, giảm ùn tắc vào mùa cao điểm cho du lịch. Các cải tạo sẽ bao gồm mở rộng bến, xây dựng nhà chờ và nâng cấp các tiện ích nhằm phục vụ lượng khách du lịch ngày càng tăng. Đảo Cát Bà hiện đang thu hút hàng trăm nghìn lượt khách tham quan mỗi năm, đặc biệt là vào mùa hè.",
+    "link": "https://vnexpress.net/dau-tu-100-ty-dong-mo-rong-ben-pha-ra-dao-cat-ba-4860787.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án mở rộng bến phà Đồng Bài - Cái Viềng có mục đích gì?",
+    "answers": [
+      {
+        "text": "Cải thiện cơ sở hạ tầng bến phà và giảm ùn tắc cho du lịch.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường số lượng phà hoạt động.",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá vé cho hành khách.",
+        "correct": false
+      },
+      {
+        "text": "Xây dựng thêm nhiều nhà hàng trên đảo.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cô gái mang lệnh truy nã nguy hiểm đang chuẩn bị trốn sang Campuchia thì bị bắt",
     "content": "Ngày 13-3, Công an Đà Nẵng đã bắt giữ Đặng Ý Nhi, một cô gái mang lệnh truy nã nguy hiểm, khi cô đang chuẩn bị trốn sang Campuchia. Nhi đã bị TAND quận Sơn Trà tuyên phạt 7 năm tù về tội tổ chức sử dụng trái phép chất ma túy và bỏ trốn từ tháng 8-2024. Sau khi nhận được thông tin, tổ công tác của phòng cảnh sát đã phối hợp với công an địa phương vây bắt Nhi tại TP.HCM.",
     "link": "https://tuoitre.vn/co-gai-mang-lenh-truy-na-nguy-hiem-dang-chuan-bi-tron-sang-campuchia-thi-bi-bat-20250313142552314.htm",
@@ -2233,6 +2260,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -2259,33 +2313,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -2712,6 +2739,33 @@
     ]
   },
   {
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "answers": [
+      {
+        "text": "Người đi xe máy",
+        "correct": true
+      },
+      {
+        "text": "Người lái ôtô",
+        "correct": false
+      },
+      {
+        "text": "Không ai phải bồi thường",
+        "correct": false
+      },
+      {
+        "text": "Cả hai bên đều phải bồi thường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2765,33 +2819,6 @@
       },
       {
         "text": "Vì muốn tiết kiệm tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
-    "answers": [
-      {
-        "text": "Người đi xe máy",
-        "correct": true
-      },
-      {
-        "text": "Người lái ôtô",
-        "correct": false
-      },
-      {
-        "text": "Không ai phải bồi thường",
-        "correct": false
-      },
-      {
-        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
